--- a/app/views/usuarios/registrations/edit.html.erb
+++ b/app/views/usuarios/registrations/edit.html.erb
@@ -83,7 +83,7 @@
       </div>
       
       <div class="actions">
-        <%= f.submit "Actualizar", class: "button is-success is-light is-responsive" %>
+        <%= f.submit "Actualizar", class: "button is-success is-outlined is-responsive" %>
       </div>
     </div>
   </div>
@@ -93,7 +93,7 @@
   <div class="column is-4">
     <div>
       <h3 class="title has-background-info-light is-4">Eliminar Mi Cuenta</h3>
-      <%= button_to "Eliminar mi cuenta", registration_path(resource_name), data: { confirm: "Estás Segur@?" }, method: :delete, class: "button is-danger is-light is-responsive" %>
+      <%= button_to "Eliminar mi cuenta", registration_path(resource_name), data: { confirm: "Estás Segur@?" }, method: :delete, class: "button is-danger is-outlined is-responsive" %>
     </div>
   </div>
 </div>
