--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -26,15 +26,43 @@
     <%= image_tag(@creador.imagen, size:"90x90" ) %>
 </p>
 
+<h2>Reseñas</h2>
+
+<% if @resenas.empty?%>
+  <p> El turno no tiene reseñas </p>
+<% else %>
+  <table align='center'>
+      <tr>
+        <thead>
+          <th>Usuario</th>
+          <th>Calificación</th>
+          <th>Comentario</th>
+        </thead>
+      </tr>
+        <% @resenas.each do |resena|%>
+      <tr>
+        <td><%= resena.usuario.nombre %></td>
+        <td><%= resena.calificacion %></td>
+        <td><%= resena.contenido %></td>
+        <%# <td>
+          <%= link_to "Eliminar", comments_delete_path(comment.id), method: :delete, data: { confirm: "Desea eliminar este comentario?"} %>
+        <%# </td> %>
+      </tr>
+        <% end %>
+  </table>
+<%  end  %>
+
+<%= link_to "Crear reseña", resenas_new_path(:turno_id => @turno.id) %>
+
 <! Acá debo agregar el nombre y foto del creador, nombre de los participantes, y cualquier otra cosa que se me ocurra
 #Además, acá va la posible solicitud >
 
-<%= link_to 'Vuelta a buscar turnos', turnos_index_path %>
+<p><%= link_to 'Vuelta a buscar turnos', turnos_index_path %></p>
 <% if current_usuario.id == @turno.id_creador %>
-<p><%= link_to 'Editar turno', turnos_edit_path(:id => @turno.id) %></p>
-<p><%= link_to "Borrar Turno", turnos_delete_path(:id => @turno.id), method: :delete %></p>
+  <p><%= link_to 'Editar turno', turnos_edit_path(:id => @turno.id) %></p>
+  <p><%= link_to "Borrar Turno", turnos_delete_path(:id => @turno.id), method: :delete %></p>
 <% elsif @mostrar_solicitar_unirse %>
-<p><%= link_to 'Solicitar unirse al turno', solicituds_new_path(:id_turno => @turno.id) %></p>
+  <p><%= link_to 'Solicitar unirse al turno', solicituds_new_path(:id_turno => @turno.id) %></p>
 <% elsif @mostrar_salirse_del_turno %>
-<p><%= link_to 'Salirse del Turno', pertenece_as_delete_path(:id_pertenece_a => @id_pertenece_a), method: :delete %></p>
+  <p><%= link_to 'Salirse del Turno', pertenece_as_delete_path(:id_pertenece_a => @id_pertenece_a), method: :delete %></p>
 <% end %>
