--- a/app/views/resenas/new.html.erb
+++ b/app/views/resenas/new.html.erb
@@ -1,22 +1,35 @@
-<h1>Resenas#new</h1>
+<section class="section">
+  <div class="columns is-mobile is-centered is-vcentered cover-all">
+    <div class="column is-half">
+      <div class="content">
+        <h1>Nueva reseña</h1>
+      </div>
 
-<%= form_with(model: @resena , method: :post) do |form| %>
+      <%= form_with(model: @resena , method: :post) do |form| %>
+        <div class="field">
+          <label class="label">Calificación</label>
+          <div class="control">
+            <%= form.number_field :calificacion, in: 1..10, step: 0.1 %>
+          </div>
+        </div>
 
-  <div>
-    <%= form.label :calificacion %>
-    <%= form.number_field :calificacion, in: 1..10, step: 0.1 %>
-  </div>
-  
-  <div>
-    <%= form.label :contenido %>
-    <%= form.text_field :contenido %>
-  </div>
+        <div class="field">
+          <label class="label">Comentario</label>
+          <div class="control">
+            <%= form.text_area :contenido, :class=>"textarea" %>
+          </div>
+        </div>
 
-  <div>
-    <%= form.hidden_field :turno_id, value: @id_turno %>
-  </div>
+        <div>
+          <%= form.hidden_field :turno_id, value: @id_turno %>
+        </div>
 
-  <div>
-    <%= form.submit 'Crear'%>
+        <div class="control">
+            <%= form.submit "Crear", :class=>"button is-info" %>
+            <%= link_to "Cancelar", turnos_show_path(:id => @id_turno, :id_creador => @id_creador), :class=>"button is-info is-light" %>
+        </div>
+        
+      <% end %>
+    </div>
   </div>
-<% end %>
+</section>
