--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -75,7 +75,9 @@
   </div>
 </section>
 
-<%= link_to "Crear reseña", resenas_new_path(:turno_id => @turno.id, :creador_id => @creador.id), class: "button is-outlined is-info is-small" %>
+<% if  PerteneceA.exists?(id_usuario: current_usuario.id, id_turno: @turno.id) %>
+  <%= link_to "Crear reseña", resenas_new_path(:turno_id => @turno.id, :creador_id => @creador.id), class: "button is-outlined is-info is-small" %>
+<% end %>
 
 <! Acá debo agregar el nombre y foto del creador, nombre de los participantes, y cualquier otra cosa que se me ocurra
 #Además, acá va la posible solicitud >
