--- a/app/views/pertenece_as/new.html.erb
+++ b/app/views/pertenece_as/new.html.erb
@@ -1,23 +1,27 @@
 <%= form_with(model: @tupla , method: :post) do |form| %>
     
-    <div>
-        <h2> Usuario Solicitando unirse </h2>
-        <%= Usuario.find(@params[:id_usuario]).nombre %>
+    <div class="columns is-centered mt-4">
+        <div class="column is-4">
+            <div><h1 class="mt-4 title is-4 has-background-info-light mb-4"> Usuario Solicitando Unirse </h1></div>
+            <div class="field">    
+                <label class="label has-text-left">Nombre: <%= Usuario.find(@params[:id_usuario]).nombre %></label>
+            </div>
+
+            <div><h1 class="mt-4 title is-4 has-background-info-light mb-4"> Turno al que se quiere unir </h1></div>
+            <div class="field">
+                <label class="label"><% turno = Turno.find(@params[:id_turno]) %></label>
+                <label class="label has-text-left">Los dias: <%= turno.dia_de_la_semana%></label>
+                <label class="label has-text-left"> Con dirección de llegada: <%= turno.direccion_llegada%><label class="label">
+            </div>
+
+            <div class="mt-6 field">
+                <label class="label"> Seguro quieres aceptarlo? </label>
+                <%= form.submit 'Aceptar', class: "button is-responsive is-outlined is-success" %>
+            </div>
+        </div>
     </div>
 
-    <div>
-        <h2> Turno al que se quiere unir </h2>
-        <% turno = Turno.find(@params[:id_turno]) %>
-        <p> Turno de los días <%= turno.dia_de_la_semana%></p>
-        <p> Con dirección de llegada <%= turno.direccion_llegada%></p>
-    </div>
-    <br>
-        <%= form.label :Seguro_que_quieres_aceptarlo_en_tu_turno? %>
-        <%= form.hidden_field :id_turno, value: @params[:id_turno]%>
-        <%= form.hidden_field :id_usuario, value: @params[:id_usuario]%>
-
-    <div>
-        <%= form.submit 'Aceptar' %>
-    </div>
+    <%= form.hidden_field :id_turno, value: @params[:id_turno]%>
+    <%= form.hidden_field :id_usuario, value: @params[:id_usuario]%>
     
 <% end %>
