--- a/app/views/resenas/new.html.erb
+++ b/app/views/resenas/new.html.erb
@@ -2,7 +2,7 @@
   <div class="columns is-mobile is-centered is-vcentered cover-all">
     <div class="column is-half">
       <div class="content">
-        <h1>Nueva reseña</h1>
+        <h1 class="mt-4 title is-3 has-background-info-light mb-4">Nueva reseña</h1>
       </div>
 
       <%= form_with(model: @resena , method: :post) do |form| %>
