--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -27,7 +27,7 @@
                         <td><%= turno.hora_salida%></td>
                         <td><%= "%i/%i" % [(PerteneceA.where(id_turno: turno.id).count + 1), turno.limite_personas] %></td>
                         <% if usuario_signed_in? %>
-                        <td><%= link_to "Ver Turno", turnos_show_path(:id => turno.id, :id_creador => turno.id_creador), class: "button is-small is-link is-light is-focused"%>
+                        <td><%= link_to "Ver Turno", turnos_show_path(:id => turno.id), class: "button is-small is-link is-light is-focused"%>
                         <% end %>
                         </td>
                     </tr>
@@ -64,7 +64,7 @@
                             <td><%= turno.direccion_salida%></td>
                             <td><%= turno.hora_salida%></td>
                             <td><%= "%i/%i" % [(PerteneceA.where(id_turno: turno.id).count + 1), turno.limite_personas] %></td>
-                            <td><%= link_to "Ver Turno", turnos_show_path(:id => turno.id, :id_creador => turno.id_creador), class: "button is-small is-link is-light is-focused"%>
+                            <td><%= link_to "Ver Turno", turnos_show_path(:id => turno.id), class: "button is-small is-link is-light is-focused"%>
                             </td>
                         </tr>
                         <% end %>
@@ -104,7 +104,7 @@
                             <td><%= turno.direccion_salida%></td>
                             <td><%= turno.hora_salida%></td>
                             <td><%= "%i/%i" % [(PerteneceA.where(id_turno: turno.id).count + 1), turno.limite_personas] %></td>
-                            <td><%= link_to "Ver Turno", turnos_show_path(:id => turno.id, :id_creador => turno.id_creador), class: "button is-small is-link is-light is-focused"%>
+                            <td><%= link_to "Ver Turno", turnos_show_path(:id => turno.id), class: "button is-small is-link is-light is-focused"%>
                             </td>
                         </tr>
                         <% end %>
