--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -88,6 +88,8 @@
       
       <% if current_usuario.id == @turno.id_creador %>
           <h3 class="title is-5">Opciones</h3>
+          <p><%= link_to "Ver Solicitudes hechas a mis turnos", solicituds_index_path(:tipo => 'solicitudes hechas al turno', :id_turno => @turno.id), class: "button is-link is-outlined is-small"%></p>
+          <br>
           <p><%= link_to 'Editar turno', turnos_edit_path(:id => @turno.id), class: "button is-outlined is-info is-small" %>
           <%= link_to "Borrar Turno", turnos_delete_path(:id => @turno.id), method: :delete, class: "button is-outlined is-danger is-small" %></p>
       <% elsif @mostrar_solicitar_unirse %>
